git remote add origin https://github.com/Asrordin/vazifa-5.git

--- a/index.html
+++ b/index.html
@@ -47,43 +47,51 @@
             <ul class="section-list">
                 <li class="section-list__item">
                     <img class="section-list__img" src="img/esspreso.png" alt="esspreso" width="256" height="193" >
+                  <div class="section-list__wraper">
                     <h4 class="section-list__heading">
                         Gran Espresso
                     </h4>
                     <p class="section-list__text">Light and flavorful blend with cocoa and black pepper for an intense experience.
 
                     </p>
+                  </div>
                 </li>
                 <li class="section-list__item">
                     <img class="section-list__img" src="img/planalto.png" alt="planalto" width="256" height="193" >
+                   <div class="section-list__wraper">
                     <h4 class="section-list__heading">
                         Planalto
                     </h4>
                     <p class="section-list__text">
                         Brazilian dark roast with rich and velvety body, and hints of fruits and nuts.
                     </p>
+                   </div>
                 </li>
                 <li class="section-list__item">
                     <img class="section-list__img" src="img/picco.png" alt="Piccollo" width="256" height="193" >
+                   <div class="section-list__wraper">
                     <h4 class="section-list__heading">
                         Piccollo
                     </h4>
                     <p class="section-list__text">
                         Mild and smooth blend featuring notes of toasted almond and dried cherry.
                     </p>
+                   </div>
                 </li>
                 <li class="section-list__item">
                     <img class="section-list__img" src="img/danche.png" alt="Danche"  width="256" height="193">
+                   <div class="section-list__wraper">
                     <h4 class="section-list__heading">
                         Danche
                     </h4>
                     <p class="section-list__text">
                         Ethiopian hand-harvested blend densely packed with vibrant fruit notes.
                     </p>
+                   </div>
                 </li>
             </ul>
          </div>
-        </section>
+       </section>
         <section class="section-container container ">
           <div class="section-wrapper ">
             <h3 class="section-wrapper__heading">
@@ -98,32 +106,38 @@
          
           <ul class="wrapper-list">
               <li class="wrapper-list__item">
-                  <h4 class="wrapper-list__heading wrapper-list__heading--best">
+                <div class="wraperr">
+                    <h4 class="wrapper-list__heading wrapper-list__heading--best">
                         Best quality
                   </h4>
                   <p class="wrapper-list__text">
                         Discover an endless variety of the world’s best artisan coffee from each of our roasters.
                   </p>
+                </div>
               </li>
               <li class="wrapper-list__item">
-                  <h4 class="wrapper-list__heading wrapper-list__heading--exclusive">
+                  <div class="wraperr">
+                    <h4 class="wrapper-list__heading wrapper-list__heading--exclusive">
                         Exclusive benefits
                   </h4>
                   <p class="wrapper-list__text">
                         Special offers and swag when you subscribe, including 30% off your first shipment.
                   </p>
+                  </div>
               </li>
               <li class="wrapper-list__item">
-                  <h4 class="wrapper-list__heading wrapper-list__heading--free">
+                <div class="wraperr">
+                    <h4 class="wrapper-list__heading wrapper-list__heading--free">
                         Free shipping
                   </h4>
                   <p class="wrapper-list__text">
                         We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.
                   </p>
+                </div>
               </li>
           </ul>
         </div>
-        </section>
+         </section>
         <section class="how-work container">
             <h2 class="how-work__heading">How it works</h2>
             <ol class="how-work__list">
@@ -155,7 +169,7 @@
                 
             </ol>
             <a class="section-heading__link" href="#">Create your plan</a>
-        </section>
+    </section>
     </main>
     <footer class="site-footer">
         <div class="wrapper-footer container ">
@@ -175,7 +189,7 @@
                     </li>
                 </ul>
             </nav>
-         <div style="margin-left: 486px; align-items: center;">
+         <div class="footer-content">
             <a class="site-footer__link" href="#">
                 <img   src="img/facebook.svg" alt="" width="24" height="24">
             </a>
