--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
     </header>
     <main class="site-main ">
-        <section class="section container">
+         <section class="section container">
             <div class="section-heading ">
                 <h2 class="section-heading__content">Great coffee
                     made simple.</h2>
@@ -171,8 +171,8 @@
             <a class="section-heading__link" href="#">Create your plan</a>
     </section>
     </main>
-    <footer class="site-footer">
-        <div class="wrapper-footer container ">
+    <footer class="site-footer container">
+        <div class="wrapper-footer">
             <a href="" class="footer-link">
                 <img  class="footer-link__img" src="img/cofe.svg" alt="" width="236" height="26">
             </a>
